Fixed some scaling and scrolling issues on mobile.

--- a/game.css
+++ b/game.css
@@ -85,7 +85,7 @@ body{
     grid-template-rows: 60vmin;
     float: none;
     display: grid;
-    position: absolute;
+    position: fixed;
     margin-left: calc( ( 100vw - 70vmin ) / 2);
     z-index: 999;
     padding-top: calc(50vh - (8vmin * 3) - 5vmin);
@@ -296,7 +296,7 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
     display: block;
-    position: absolute;
+    position: fixed;
     text-align: center;
     width: 8.4vmin;
     height: 8.4vmin;
@@ -314,7 +314,7 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
     display: block;
-    position: absolute;
+    position: fixed;
     text-align: center;
     width: 8.4vmin;
     height: 8.4vmin;
@@ -332,7 +332,7 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
     display: block;
-    position: absolute;
+    position: fixed;
     text-align: center;
     width: 5.4vmin;
     height: 5.4vmin;
@@ -350,7 +350,7 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
     display: block;
-    position: absolute;
+    position: fixed;
     text-align: center;
     width: 5.4vmin;
     height: 5.4vmin;
